2017-08-26  Lukas Kluft  <lukas.kluft@gmail.com>

	Fixed documentation with and without ARTS API.

	* doc/typhon.arts.rst, doc/typhon.arts.workspace.rst:

	Moved documentation of workspace module to separate file.
	This file can be excluded when the documentation is build
	without ARTS API.

	Fixed references for automodules for some modules (most likely
	copy and paste remnants.)

	* doc/conf.py:

	Exclude `typhon.arts.workspace.rst` for builds without ARTS API.

	Removed shlex from list of imports as it was not used.

	* doc/modules.rst: Include typhon.arts.workspace to toctree.

2017-08-26  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	Fixed some problems with passing parameters when calling WSMs
	and added functionality to define agendas using python function syntax.

	* typhon/arts/workspace/__init__.py:
	- Export arts_agenda decorator

	* typhon/arts/workspace/agendas.py:
	- methods to clear agendas and add WSMs to them
	- method to convert agendas to VariableValueStruct

	* typhon/arts/workspace/api.py:
	- Add generic interface to convert python object to VariableValueStructs
	- Add declarations for new methods in C API

	* typhon/arts/workspace/methods.py:
	- Separate parsing and parameter lookup from actual WSM call to facilitate reuse

	* typhon/arts/workspace/variables.py:
	- Add agendas to returnable types

	* typhon/arts/workspace/workspace.py:
	- Added some decorator black magic that allows defining ARTS agendas using python
	function syntax


2017-08-25  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/units/em.py(SRF.make_lookup_table):

	- fill value for high end should be something ridiculously high, not
	0.  Arguably bounds_error should be True, or some iterative method to
	estimate BTs should be used when out of range, but the former is too
	inflexible and the latter is too much work to implement right now, in
	particular with vectorisation in mind.

2017-08-25  Lukas Kluft  <lukas.kluft@gmail.com>
